--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
- "homepage": "https://rylee816.github.io/React-Travel-Demo-Website/",
+ "homepage": "https://rylee816.github.io",
   "name": "react_travel_website",
   "version": "0.1.0",
   "private": true,
